# momo-kibidango

./: .coverage  .gitignore  .pypirc.template  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.yaml  INSTALLATION_TROUBLESHOOTING.md  LAUNCH_ANNOUNCEMENT.md  LICENSE  MANIFEST.in  OPTIMIZATION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_VERIFICATION.txt  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_LAUNCH_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_PROCESS.md  SUBAGENT_COMPLETION_REPORT.md  WEEK1_COMPLETION_SUMMARY.md  WEEK2_COMPLETION_SUMMARY.md  config-test.yaml  install.sh  pyproject.toml  quick_test.py  requirements.txt  test_3model_quick.py  test_model_loading.py  test_simple.py  uninstall.sh  update.sh  validate-installation.sh
.github/workflows/: benchmark.yml  publish.yml  release.yml  test.yml
docs/: ARCHITECTURE.md  CASCADE_ALGORITHM.md  GITHUB_RELEASE_NOTES.md  MCP_INTEGRATION_GUIDE.md  OPENCLAW_INTEGRATION.md  PHASE2_OPTIMIZATION_RESULTS.md  PHASE2_RESULTS.md  PHASE3_ARCHITECTURE_DESIGN.md  PHASE3_RESULTS.md  PHASE4_RESULTS.md  PRESS_KIT.md  PRODUCTION_DEPLOYMENT.md  REDDIT_POSTS.md  TWITTER_THREAD.md  WEEK3_MCP_IMPLEMENTATION.md
examples/: claude_agent_example.py
results/: baseline_performance.json  minimal_test.json  optimized_test.json  phase2_benchmark.json  phase2_benchmark_v2.json  phase3_benchmark_simulated.json  quick_test_results.json
scripts/: benchmark_2model.py  benchmark_2model_test.py  benchmark_3model.py  build.sh  download_models.py  establish_baseline.py  health-check.sh  openclaw_client.py  publish-prod.sh  publish-test.sh  run_phase2_optimization.py  setup-production.sh  start-proxy.sh
src/: openclaw_integration.py  openclaw_integration_v2.py  openclaw_native.py  production_hardening.py  speculative_2model.py  speculative_2model_4bit.py  speculative_2model_minimal.py  speculative_2model_optimized.py  speculative_3model.py  speculative_3model_production.py
src/momo_kibidango/: __init__.py  cli.py  exceptions.py  mcp_server.py  monitoring.py  performance_optimization.py  proxy.py  utils.py
src/momo_kibidango/api/: __init__.py  mcp_server.py  server.py
src/momo_kibidango/config/: __init__.py  claude_defaults.yaml  defaults.yaml  (+1 more)
tests/: conftest.py  run_tests.py  test_mcp_imports.py  test_mcp_server.py  test_performance.py  test_production.py
tests/test_acceptance/: test_cascade_quality.py  test_prompts.py  test_quality.py
tests/test_integration/: test_api.py  test_cascade_pipeline.py  test_fallback.py  test_three_model_pipeline.py  test_two_model_pipeline.py
tests/test_performance/: test_benchmarks.py  test_memory.py  test_throughput.py
tests/test_unit/: test_adaptive.py  test_cascade.py  test_claude_client.py  test_confidence.py  test_decoder.py  test_exceptions.py  test_kv_cache.py  test_loader.py  test_metrics.py  test_registry.py  test_settings.py  test_tokenizer_bridge.py
(+16 files in other folders)
